# inge.courses-s9

ihr/: devenv.nix  devenv.yaml
rob-envs-communicants/: .gitignore  README.md  docker-compose.yml
rob-envs-communicants/Part1/: README.md
rob-envs-communicants/Part1/ESP_Cervo/: platformio.ini
rob-envs-communicants/Part1/ESP_Cervo/src/: main.cpp
rob-envs-communicants/Part1/ESP_Temp/: platformio.ini
rob-envs-communicants/Part1/ESP_Temp/src/: main.cpp
rob-envs-communicants/Part1/HA/: automations.yaml  configuration.yaml
rob-envs-communicants/Part1/Python/: main.py
rob-envs-communicants/Part2/: README.md
rob-envs-communicants/Part2/ESPHome/: esp-johan.yaml  esp-julien.yaml
rob-envs-communicants/Part2/HA/: automations.yaml
rob-envs-communicants/Part3/: README.md
rob-envs-communicants/Part3/ESP_Cervo/: platformio.ini
rob-envs-communicants/Part3/ESP_Cervo/src/: main.cpp
rob-envs-communicants/Part3/ESP_Temp/src/: main.cpp
rob-envs-communicants/Part3/Python/: main.py
rob-envs-communicants/Projet/: README.md
rob-envs-communicants/Projet/ESP-Enceinte/: platformio.ini
rob-envs-communicants/Projet/ESP-Enceinte/src/: main.cpp
rob-envs-communicants/Projet/Python/: main.py
rob-envs-communicants/Projet/esp-rs-pad/: Cargo.toml  sdkconfig.defaults
rob-envs-communicants/Projet/esp-rs-pad/.cargo/: config.toml
rob-envs-communicants/Projet/esp-rs-pad/examples/: manual_blink.rs  spi_controlled.rs
rob-envs-communicants/Projet/esp-rs-pad/src/: button_pad_controller.rs  main.rs
ros2-toolkit/: docker-compose.yml  docker_bash.sh  ros-univ-pkgs.txt
ros2-toolkit/projects/global_planner_short_path_student/global_planner_short_path_student/global_planner_short_path_student/: ShortPathMng.py
ros2-toolkit/projects/global_planner_short_path_student/global_planner_short_path_student/global_planner_short_path_student/ShortPathMethods/: Dijkstra.py
ros2-toolkit/projects/local_planner_student/local_planner_student/local_planner_student/: local_planner.py
ros2-toolkit/projects/training-turtlebot-simulator-student/turtlebot_gazebo/maps/: johan_map.pgm  johan_map.yaml
(+10 files in other folders)
