[package]
name = "esp-rs-pad"
version = "0.1.0"
authors = ["Johan Planchon <dev@planchon.dev>"]
edition = "2021"
resolver = "2"
rust-version = "1.71"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "hal", "esp-idf-sys/native"]


pio = ["esp-idf-sys/pio"]
all = ["std", "nightly", "experimental", "embassy"]
hal = ["esp-idf-hal", "embedded-svc", "esp-idf-svc"]
std = ["alloc", "esp-idf-sys/std", "esp-idf-sys/binstart", "embedded-svc?/std", "esp-idf-hal?/std", "esp-idf-svc?/std"]
alloc = ["embedded-svc?/alloc", "esp-idf-hal?/alloc", "esp-idf-svc?/alloc"]
nightly = ["embedded-svc?/nightly", "esp-idf-svc?/nightly"]
experimental = ["embedded-svc?/experimental", "esp-idf-svc?/experimental"]
embassy = ["esp-idf-hal?/embassy-sync", "esp-idf-hal?/critical-section", "esp-idf-hal?/edge-executor", "esp-idf-svc?/embassy-time-driver", "esp-idf-svc?/embassy-time-isr-queue"]

[patch.crates-io]
# Need BLE support in STD https://github.com/esp-rs/esp-idf-svc/issues/55
# esp-idf-svc = { git = "https://github.com/esp-rs/esp-idf-svc" } #, rev = "a81906cd7edfe655fca73cc7b8b5853e178b2d84" }
# embedded-svc = { git = "https://github.com/esp-rs/embedded-svc" } #, rev = "4b6ab52de45c0b7c63aff1052c629af82d6d807b" }
# esp-idf-hal = { git = "https://github.com/esp-rs/esp-idf-hal" } #, rev = "dd06b698ae9ab4544879f0e32f3cc8a3543f20bc" }
# esp-idf-sys = { git = "https://github.com/esp-rs/esp-idf-sys" } #, rev = "fcab4ce150091705701e355afcae42235af1067f" }

[dependencies]
log = { version = "0.4", default-features = false }
anyhow = "1.0"
esp-idf-sys = { version = "0.33", default-features = false }
esp-idf-hal = { version = "0.41", optional = true, default-features = false }
esp-idf-svc = { version = "0.46", optional = true, default-features = false }
embedded-svc = { version = "0.25", optional = true, default-features = false }
embedded-hal = "1.0.0-alpha.10"

esp32-nimble = "0.2" 
bit-vec = "0.6.3"

[build-dependencies]
embuild = "0.31"
